// This file is part of radia.
//
// radia is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// radia is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with radia.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

import "github.com/golang/protobuf/ptypes/any/any.proto";
import "github.com/tcolgate/radia/graph/graph.proto";

package graphalg;

service MessageService {
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
  rpc EdgeWeight (EdgeWeightRequest) returns (EdgeWeightResponse);
}

message Weight {
  double Cost = 1;
  string Lsn  = 2;
  string Msn  = 3;
}

message Message {
  google.protobuf.Any Payload = 4;
}

message SendMessageRequest {
  string From           = 1;
  string To             = 2;
  graph.GraphID gid     = 3;
  graph.AlgorithmID aid = 4;
  Message msg           = 5;
}

message Error {
  int32  error   = 1;
  string msg     = 2;
}

message SendMessageResponse {
  Error error = 1;
}

message TestMessage {
  int32 Value = 1;
}

message EdgeWeightRequest {
  string From           = 1;
  string To             = 2;
  Weight weight         = 3;
}

message EdgeWeightResponse {
  Error error   = 1;
  Weight weight = 2;
}

