// This file is part of vonq.
// 
// vonq is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// vonq is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
// 
// You should have received a copy of the GNU General Public License
// along with vonq.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package proto;

service TraceService {
  rpc Log (LogRequest) returns (LogResponse);
  rpc NodeUpdate (NodeUpdateRequest) returns (NodeUpdateResponse);
  rpc EdgeUpdate (EdgeUpdateRequest) returns (EdgeUpdateResponse);
  rpc EdgeMessage (EdgeMessageRequest) returns (EdgeMessageResponse);
}


message LogRequest {
  int64  Time    = 1;
  string NodeID  = 2;
  string Message = 3;
}

message LogResponse {
}

message NodeUpdateRequest{
  int64  Time   = 1;
  string NodeID = 2;
  string Status = 3;
}

message NodeUpdateResponse{
}

message EdgeUpdateRequest{
  int64  Time     = 1;
  string NodeID   = 2;
  string EdgeName = 3;
  string Status   = 4;
}

message EdgeUpdateResponse{
}

message EdgeMessageRequest{
  int64  Time     = 1;
  string NodeID   = 2;
  string EdgeName = 3;
  string Message  = 4;
  enum Dir {
    IN  = 0;
    OUT = 1;
  }
  Dir Direction   = 5;
}

message EdgeMessageResponse{
}
